Fixed rsvp-fly styling on mobile

--- a/src/app/components/rsvp/rsvp.component.scss
+++ b/src/app/components/rsvp/rsvp.component.scss
@@ -9,6 +9,7 @@
   color: $onyx;
   align-items: center;
   span {
+    margin-top: 0.4em;
     font-size: 0.8em;
   }
   i {
